feat: Implement AI report generation and enhance request handling

--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   
   # Location services
   geolocator: ^14.0.2
+
+  liquid_glass_renderer: ^0.2.0-dev.4
   
   # Image handling
   image_picker: ^1.2.1
